# LLMGeometry

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: exp01.yaml  exp02.yaml  exp02b.yaml  exp03.yaml  exp03b.yaml  exp04.yaml  exp05.yaml  exp05b.yaml  exp06.yaml  exp07.yaml  exp08.yaml  exp09.yaml  exp10.yaml  exp10b.yaml
configs/smoke/: exp06.yaml  exp07.yaml  exp08.yaml  exp10.yaml
experiments/: exp01_angles.py  exp02_ratio_invariance.py  exp02b_ratio_invariance_edits.py  exp02b_ratio_invariance_logits.py  exp03_contrasts.py  exp03_euclid_vs_causal.py  exp04_boundary_normals.py  exp05_estimators.py  exp05_interventions.py  exp06_fisher_logit.py  exp07_whitening_ablation.py  exp08_dataset_variants.py  exp09_token_granularity.py  exp10_emergence_curves.py  exp10_layer_variants.py  run_all.py
llmgeometry/: __init__.py  activations.py  concepts.py  estimators.py  geometry.py  interventions.py  loaders.py  metrics.py  validation.py
results/: pullFigures.py
scripts/: setup_and_run_gpu.sh
tests/: test_geometry_core.py  test_metrics_ev_ce.py  test_validation.py
tools/: build_activations.py  build_default_hierarchy.py  build_toy_hierarchy.py  build_wordnet_hierarchy.py  check_acceptance.py  extract_diagnostics.py  figures.py  log_results_wandb.py  make_gpu_configs.py
