[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmgeometry"
version = "0.1.0"
description = "Geometry-only toolkit for final-layer analyses in LLMs"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["llmgeometry"]

